syntax = "proto3";

package sso;
option go_package = "sso_auth/gen;ssoapb";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string app_id = 3;
}

message RegisterResponse {
  string status = 1;
  string message = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  string app_id = 3;
}

message LoginResponse {
  string token = 1;
}

message ChangePasswordRequest {
  string email = 1;
  string app_id = 2;
  string old_password = 3;
  string new_password = 4;
}

message ChangePasswordResponse {
  string status = 1;
  string message = 2;
}